@@ -1,6 +1,7 @@
 ===========================================================================
 5.7
 
+Added: @BeforeMethods can now take a Method and ITestContext parameters (like @DataProvider)
 Fixed: logging about abstract classes moved to level 5
 Added: if @Parameter is missing from testng.xml then it is read from Sys env.
 Fixed: Don't run a @DataProvider method as a test when a class-level @Test is present
